--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import './styles/theme/eva.scss';
+
+*,
+html,
+body {
+  font-family: 'Montserrat', sans-serif;
+}
