Added pre code example for buttons

--- a/src/app/pages/styleguide/styleguide.component.html
+++ b/src/app/pages/styleguide/styleguide.component.html
@@ -237,6 +237,12 @@
           The buttons are pulled from the color palette and will create a button
           for each color.
 
+          <pre>
+&lt;button class="eva-btn eva-btn{{
+              '{' + '{ color }' + '}'
+            }}&gt;&lt;/button&gt;</pre
+          >
+
           <div class="buttons-examples-container grid-margin-x">
             <button class="shrink cell eva-btn eva-btn-default">
               <span>EVA button</span>
@@ -284,6 +290,14 @@
         </div>
         <div class="card-content">
           The following are the EVA buttons classes available in the project.
+          The buttons are pulled from the color palette and will create a button
+          for each color.
+
+          <pre>
+&lt;button class="eva-btn eva-btn-outline-{{
+              '{' + '{ color }' + '}'
+            }}&gt;&lt;/button&gt;</pre
+          >
 
           <div class="buttons-examples-container grid-margin-x">
             <button class="shrink cell eva-btn eva-btn-default">
