--- a/src/app/pages/styleguide/styleguide.component.html
+++ b/src/app/pages/styleguide/styleguide.component.html
@@ -18,7 +18,7 @@
           <pre>
 &lt;div class="bg-{{ '{' + '{ color }' + '}' }}-{{
               '{' + '{ variation }' + '}'
-            }}"&gt;&lt;/div&gt;</pre
+            }}"&gt;&lt;&#8725;div&gt;</pre
           >
 
           <div>
@@ -240,7 +240,7 @@
           <pre>
 &lt;button class="eva-btn eva-btn{{
               '{' + '{ color }' + '}'
-            }}&gt;&lt;/button&gt;</pre
+            }}&gt;&lt;&#8725;button&gt;</pre
           >
 
           <div class="buttons-examples-container grid-margin-x">
@@ -296,7 +296,7 @@
           <pre>
 &lt;button class="eva-btn eva-btn-outline-{{
               '{' + '{ color }' + '}'
-            }}&gt;&lt;/button&gt;</pre
+            }}&gt;&lt;&#8725;button&gt;</pre
           >
 
           <div class="buttons-examples-container grid-margin-x">
