--- a/src/styles/theme/_settings.scss
+++ b/src/styles/theme/_settings.scss
@@ -1,5 +1,7 @@
 /* The project prefix is used for several classes such as buttons. Example: 'eve-btn-primary'*/
 $project-prefix: 'eva';
+$title-font: 'Montserrat', sans-serif;
+$content-font: 'Open Sans', sans-serif;
 
 $resolution-small: 0px;
 $resolution-medium: 768px;
