--- a/src/styles/theme/_cards.scss
+++ b/src/styles/theme/_cards.scss
@@ -14,6 +14,7 @@
     font-weight: semi-bold;
     margin-bottom: 0.25rem;
     line-height: 1;
+    font-family: $title-font;
   }
 
   .card-subtitle {
@@ -21,5 +22,6 @@
     font-size: 0.8rem;
     color: color(neutral, trans);
     font-weight: bold;
+    font-family: $title-font;
   }
 }
