--- a/src/app/pages/styleguide/styleguide.component.scss
+++ b/src/app/pages/styleguide/styleguide.component.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/theme/settings';
+
 .styleguide-container {
   background-color: #f5f5f5;
 }
@@ -19,7 +21,7 @@ pre {
   display: flex;
   flex-wrap: wrap;
 
-  .eva-btn {
+  .#{$project-prefix}-btn {
     margin-top: 0.75rem;
   }
 }
