--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,2 @@
 /* You can add global styles to this file, and also import other style files */
-@import './styles/theme/eva.scss';
-
+@import './styles/theme/theme.scss';
