--- a/src/styles/theme/_settings.scss
+++ b/src/styles/theme/_settings.scss
@@ -1,4 +1,5 @@
-/* The project prefix is used for several classes such as buttons. Example: 'eve-btn-primary'*/
+/* The project prefix is used for several classes. It can be changed for your project name. */
+/* It is used in several classes such: eva-btn. Can be changed to whatever-btn */
 $project-prefix: 'eva';
 $title-font: 'Montserrat', sans-serif;
 $content-font: 'Open Sans', sans-serif;
