Added introduction. Added buddy to readme.

--- a/src/app/pages/styleguide/styleguide.component.html
+++ b/src/app/pages/styleguide/styleguide.component.html
@@ -2,6 +2,42 @@
   <div class="grid-container">
     <div class="padding-y">
       <h1>Eva</h1>
+      <p>
+        This project is to help start a new project using Angular + Material +
+        Zurb Foundation XY Grid. It can be used to quickly scaffold an Angular
+        application following best practices and a consistent style sytem.
+      </p>
+      <p>
+        It is easily customizable for your needs. You can start using it right
+        away, however you might want to change the color palette, fonts,
+        breakpoints, spacing values, etc. This is fully customizable under the
+        settings file.
+      </p>
+      <p>
+        You can even change the name of the project (which is used on some of
+        the CSS Classes). So, instead of using the class eva-btn &#123;&#125;,
+        you can change it for whatever prefix you like.
+      </p>
+      <p>
+        It consists in the following, and more. For further documentation on
+        each section and examples please clone the repo.
+      </p>
+      <h3>Why Foundation instead of Bootstrap?</h3>
+      <p>
+        For this project I'm not importing everything in Foundation. Actually
+        the only thing that is being import is the XY Grid. This way you can
+        change everything in the UI very easily at your own liking.
+      </p>
+      <p>
+        Both Bootstrap and Foundation have support for responsive grids and
+        flexible breakpoints. However, Foundation has support for responsive
+        gutters, which are so easy to setup that seem like magic.
+      </p>
+      <p>
+        When it comes to cleanliness Foundation may have a better grid system
+        because Foundation has no containers and relies heavily on rows is a
+        plus, as you end up with a cleaner DOM.
+      </p>
       <div class="card margin-y">
         <div class="card-title">
           Colors
