--- a/src/app/pages/styleguide/styleguide.component.html
+++ b/src/app/pages/styleguide/styleguide.component.html
@@ -407,6 +407,16 @@
               />
             </div>
             <div class="cell small-12">
+              <label>Select example</label>
+              <select placeholder="Choose Wisely">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+              </select>
+            </div>
+            <div class="cell small-12">
               <label>Textarea example</label>
               <textarea
                 required
@@ -443,6 +453,50 @@
           <pre>
 .some-class &#123; padding: 0.5rem; @include resolutions-above(resolution(large)) &#123; padding: 1rem &#125;&#125;;</pre
           >
+        </div>
+      </div>
+
+      <div class="card margin-y">
+        <div class="card-title">
+          Material Snackbar
+        </div>
+        <div class="card-subtitle">
+          <a href="https://material.angular.io/components/snack-bar/overview">
+            Snackbar - Toast - Alert
+          </a>
+        </div>
+        <div class="card-content">
+          Eva overrides the default Angular Material Snackbar component styles
+          for a better "alert" notification looking component. The usage is the
+          same as the material component, but you have 3 classes out of the box
+          for different alerts.
+
+          <div class="buttons-examples-container grid-margin-x">
+            <button
+              (click)="openSnackbar('This is a default snackbar!', 'default')"
+              class="shrink cell eva-btn eva-btn-primary"
+            >
+              Default snackbar
+            </button>
+            <button
+              (click)="openSnackbar('This is a success snackbar!', 'success')"
+              class="shrink cell eva-btn eva-btn-success"
+            >
+              Success snackbar
+            </button>
+            <button
+              (click)="openSnackbar('This is a warning snackbar!', 'warning')"
+              class="shrink cell eva-btn eva-btn-warning"
+            >
+              Warning snackbar
+            </button>
+            <button
+              (click)="openSnackbar('This is a danger snackbar!', 'danger')"
+              class="shrink cell eva-btn eva-btn-danger"
+            >
+              Danger snackbar
+            </button>
+          </div>
         </div>
       </div>
     </div>
