--- a/src/styles/theme/_forms.scss
+++ b/src/styles/theme/_forms.scss
@@ -1,5 +1,3 @@
-@import './colors';
-
 label {
   font-size: 0.9rem;
   line-height: 1;
@@ -8,19 +6,21 @@ label {
 }
 
 input,
+select,
 textarea {
   background-color: #f2f2f2;
-  border: none;
+  border: 2px solid transparent;
   border-bottom: 2px solid color(neutral, lighter);
-  border-radius: 0.2rem;
+  border-radius: 0.2rem !important;
   box-shadow: none;
   color: color(neutral, base);
-  font-size: 1rem;
+  font-size: 1rem !important;
   min-height: 2.75rem;
   outline: none;
   padding: 0 1rem 0 0.5rem;
   transition: all 0.3s ease;
   width: 100%;
+  max-width: 100%;
 
   &::placeholder {
     color: color(neutral, trans);
@@ -45,12 +45,12 @@ textarea {
   }
 
   &.ng-touched.ng-invalid {
-    background-color: color(danger, base) !important;
-    border-color: transparent !important;
+    background-color: color(danger, trans) !important;
+    border: 2px solid color(danger, base);
     color: color(light) !important;
 
     &::placeholder {
-      color: color(danger, lighter);
+      color: color(danger, base);
     }
   }
 }
@@ -59,4 +59,26 @@ textarea {
   height: 8rem;
   padding: 1rem;
   resize: vertical;
+}
+
+select {
+  display: block;
+  appearance: none;
+  line-height: 1.3 !important;
+  background-image: url('https://fonts.gstatic.com/s/i/materialicons/keyboard_arrow_down/v4/24px.svg');
+  background-repeat: no-repeat;
+  background-position: right 0.75rem top 50%;
+  background-size: 1.5 auto;
+
+  &::-ms-expand {
+    display: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  option {
+    font-weight: normal;
+  }
 }
