--- a/src/app/eva/styleguide/components/resolutions-guide/resolutions-guide.component.html
+++ b/src/app/eva/styleguide/components/resolutions-guide/resolutions-guide.component.html
@@ -16,12 +16,14 @@
 
     Use these mixins under any SCSS rule and use your own rules.
 
-    <pre>
+    <pre class="show-for-medium">
 .some-class &#123; padding: 0.5rem; @include resolutions-above(resolution(large)) &#123; padding: 1rem &#125;&#125;;</pre
     >
 
     <div class="grid-x">
-      <div class="cell small-12 responsive-layout-example"></div>
+      <div class="cell small-12 responsive-layout-example">
+        Change screen size and see this container change colors!
+      </div>
     </div>
   </div>
 </div>
