--- a/src/app/eva/styleguide/components/snackbar-guide/snackbar-guide.component.html
+++ b/src/app/eva/styleguide/components/snackbar-guide/snackbar-guide.component.html
@@ -16,25 +16,25 @@
     <div class="grid-x grid-margin-x">
       <button
         (click)="openSnackbar('This is a default snackbar!', 'default')"
-        class="shrink cell eva-btn eva-btn-primary"
+        class="small-6 cell eva-btn eva-btn-primary"
       >
         Default snackbar
       </button>
       <button
         (click)="openSnackbar('This is a success snackbar!', 'success')"
-        class="shrink cell eva-btn eva-btn-success"
+        class="small-6 cell eva-btn eva-btn-success"
       >
         Success snackbar
       </button>
       <button
         (click)="openSnackbar('This is a warning snackbar!', 'warning')"
-        class="shrink cell eva-btn eva-btn-warning"
+        class="small-6 cell eva-btn eva-btn-warning"
       >
         Warning snackbar
       </button>
       <button
         (click)="openSnackbar('This is a danger snackbar!', 'danger')"
-        class="shrink cell eva-btn eva-btn-danger"
+        class="small-6 cell eva-btn eva-btn-danger"
       >
         Danger snackbar
       </button>
