--- a/src/app/eva/styleguide/components/color-guide/color-guide.component.html
+++ b/src/app/eva/styleguide/components/color-guide/color-guide.component.html
@@ -22,7 +22,8 @@
       Color brightness is determined by the following formula: ((Red value X
       299) + (Green value X 587) + (Blue value X 114)) / 1000
     </p>
-    <pre>
+
+    <pre class="show-for-medium">
 &lt;div class="bg-{{ '{' + '{ color }' + '}' }}-{{
         '{' + '{ variation }' + '}'
       }}"&gt;&lt;&#8725;div&gt;</pre
@@ -33,22 +34,34 @@
         <div class="bold cell small-12">
           Primary
         </div>
-        <div class="cell small-2 color-example bg-primary-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-primary-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-primary-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-primary-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-primary-base">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-primary-base"
+        >
           base
         </div>
-        <div class="cell small-2 color-example bg-primary-dark">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-primary-dark"
+        >
           dark
         </div>
-        <div class="cell small-2 color-example bg-primary-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-primary-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-primary-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-primary-trans"
+        >
           trans
         </div>
       </div>
@@ -56,22 +69,34 @@
         <div class="bold cell small-12">
           Secondary
         </div>
-        <div class="cell small-2 color-example bg-secondary-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-secondary-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-secondary-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-secondary-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-secondary-base">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-secondary-base"
+        >
           base
         </div>
-        <div class="cell small-2 color-example bg-secondary-dark">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-secondary-dark"
+        >
           dark
         </div>
-        <div class="cell small-2 color-example bg-secondary-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-secondary-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-secondary-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-secondary-trans"
+        >
           trans
         </div>
       </div>
@@ -79,22 +104,34 @@
         <div class="bold cell small-12">
           Tertiary
         </div>
-        <div class="cell small-2 color-example bg-tertiary-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-tertiary-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-tertiary-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-tertiary-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-tertiary-base">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-tertiary-base"
+        >
           base
         </div>
-        <div class="cell small-2 color-example bg-tertiary-dark">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-tertiary-dark"
+        >
           dark
         </div>
-        <div class="cell small-2 color-example bg-tertiary-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-tertiary-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-tertiary-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-tertiary-trans"
+        >
           trans
         </div>
       </div>
@@ -102,22 +139,34 @@
         <div class="bold cell small-12">
           Accent
         </div>
-        <div class="cell small-2 color-example bg-accent-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-accent-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-accent-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-accent-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-accent-base">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-accent-base"
+        >
           base
         </div>
-        <div class="cell small-2 color-example bg-accent-dark">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-accent-dark"
+        >
           dark
         </div>
-        <div class="cell small-2 color-example bg-accent-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-accent-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-accent-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-accent-trans"
+        >
           trans
         </div>
       </div>
@@ -125,22 +174,34 @@
         <div class="bold cell small-12">
           Success
         </div>
-        <div class="cell small-2 color-example bg-success-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-success-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-success-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-success-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-success-base">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-success-base"
+        >
           base
         </div>
-        <div class="cell small-2 color-example bg-success-dark">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-success-dark"
+        >
           dark
         </div>
-        <div class="cell small-2 color-example bg-success-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-success-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-success-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-success-trans"
+        >
           trans
         </div>
       </div>
@@ -148,18 +209,34 @@
         <div class="bold cell small-12">
           Warning
         </div>
-        <div class="cell small-2 color-example bg-warning-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-warning-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-warning-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-warning-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-warning-base">base</div>
-        <div class="cell small-2 color-example bg-warning-dark">dark</div>
-        <div class="cell small-2 color-example bg-warning-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-warning-base"
+        >
+          base
+        </div>
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-warning-dark"
+        >
+          dark
+        </div>
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-warning-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-warning-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-warning-trans"
+        >
           trans
         </div>
       </div>
@@ -167,22 +244,34 @@
         <div class="bold cell small-12">
           Danger
         </div>
-        <div class="cell small-2 color-example bg-danger-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-danger-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-danger-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-danger-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-danger-base">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-danger-base"
+        >
           base
         </div>
-        <div class="cell small-2 color-example bg-danger-dark">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-danger-dark"
+        >
           dark
         </div>
-        <div class="cell small-2 color-example bg-danger-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-danger-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-danger-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-danger-trans"
+        >
           trans
         </div>
       </div>
@@ -190,41 +279,61 @@
         <div class="bold cell small-12">
           Info
         </div>
-        <div class="cell small-2 color-example bg-info-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-info-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-info-light">light</div>
-        <div class="cell small-2 color-example bg-info-base">
+        <div class="cell small-12 medium-4 large-2 color-example bg-info-light">
+          light
+        </div>
+        <div class="cell small-12 medium-4 large-2 color-example bg-info-base">
           base
         </div>
-        <div class="cell small-2 color-example bg-info-dark">
+        <div class="cell small-12 medium-4 large-2 color-example bg-info-dark">
           dark
         </div>
-        <div class="cell small-2 color-example bg-info-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-info-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-info-trans">trans</div>
+        <div class="cell small-12 medium-4 large-2 color-example bg-info-trans">
+          trans
+        </div>
       </div>
       <div class="grid-x medium-margin-y">
         <div class="bold cell small-12">
           Neutral
         </div>
-        <div class="cell small-2 color-example bg-neutral-lighter">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-neutral-lighter"
+        >
           lighter
         </div>
-        <div class="cell small-2 color-example bg-neutral-light">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-neutral-light"
+        >
           light
         </div>
-        <div class="cell small-2 color-example bg-neutral-base">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-neutral-base"
+        >
           base
         </div>
-        <div class="cell small-2 color-example bg-neutral-dark">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-neutral-dark"
+        >
           dark
         </div>
-        <div class="cell small-2 color-example bg-neutral-darker">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-neutral-darker"
+        >
           darker
         </div>
-        <div class="cell small-2 color-example bg-neutral-trans">
+        <div
+          class="cell small-12 medium-4 large-2 color-example bg-neutral-trans"
+        >
           trans
         </div>
       </div>
