--- a/src/styles/theme/theme.scss
+++ b/src/styles/theme/theme.scss
@@ -2,10 +2,9 @@
 @import './_colors.scss';
 @import './_color-classes.scss';
 @import './_responsive.scss';
-
 @import './_buttons.scss';
+@import './_button-classes.scss';
 @import './_cards.scss';
-
 @import './_flex.scss';
 @import './_forms.scss';
 @import './_snackbar.scss';
