--- a/src/app/eva/styleguide/components/buttons-guide/buttons-guide.component.html
+++ b/src/app/eva/styleguide/components/buttons-guide/buttons-guide.component.html
@@ -11,7 +11,7 @@
     color.
 
     <pre class="show-for-medium">
-&lt;button class="eva-btn eva-btn-{{
+&lt;button class="eva-btn-{{
         '{' + '{ color }' + '}'
       }}&gt;&lt;&#8725;button&gt;</pre
     >
@@ -19,34 +19,34 @@
     <div
       class="buttons-examples-container grid-x grid-margin-x small-up-2 medium-up-5"
     >
-      <button class="cell eva-btn eva-btn-primary">
+      <button class="cell eva-btn-primary">
         <span>Primary button</span>
       </button>
-      <button class="cell eva-btn eva-btn-secondary">
+      <button class="cell eva-btn-secondary">
         <span>Secondary button</span>
       </button>
-      <button class="cell eva-btn eva-btn-tertiary">
+      <button class="cell eva-btn-tertiary">
         <span>Tertiary button</span>
       </button>
-      <button class="cell eva-btn eva-btn-accent">
+      <button class="cell eva-btn-accent">
         <span>Accent button</span>
       </button>
-      <button class="cell eva-btn eva-btn-success">
+      <button class="cell eva-btn-success">
         <span>Success button</span>
       </button>
-      <button class="cell eva-btn eva-btn-warning">
+      <button class="cell eva-btn-warning">
         <span>Warning button</span>
       </button>
-      <button class="cell eva-btn eva-btn-danger">
+      <button class="cell eva-btn-danger">
         <span>Danger button</span>
       </button>
-      <button class="cell eva-btn eva-btn-info">
+      <button class="cell eva-btn-info">
         <span>Info button</span>
       </button>
-      <button class="cell eva-btn eva-btn-neutral">
+      <button class="cell eva-btn-neutral">
         <span>Neutral button</span>
       </button>
-      <button class="cell eva-btn" disabled>
+      <button class="cell" disabled>
         <span>Disabled button</span>
       </button>
     </div>
@@ -66,7 +66,7 @@
     color.
 
     <pre class="show-for-medium">
-&lt;button class="eva-btn eva-btn-outline-{{
+&lt;button class="eva-btn-outline-{{
         '{' + '{ color }' + '}'
       }}&gt;&lt;&#8725;button&gt;</pre
     >
@@ -74,34 +74,34 @@
     <div
       class="buttons-examples-container grid-x grid-margin-x small-up-2 medium-up-5"
     >
-      <button class="cell eva-btn eva-btn-outline-primary">
+      <button class="cell eva-btn-outline-primary">
         <span>Primary button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-secondary">
+      <button class="cell eva-btn-outline-secondary">
         <span>Secondary button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-tertiary">
+      <button class="cell eva-btn-outline-tertiary">
         <span>Tertiary button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-accent">
+      <button class="cell eva-btn-outline-accent">
         <span>Accent button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-success">
+      <button class="cell eva-btn-outline-success">
         <span>Success button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-warning">
+      <button class="cell eva-btn-outline-warning">
         <span>Warning button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-danger">
+      <button class="cell eva-btn-outline-danger">
         <span>Danger button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-info">
+      <button class="cell eva-btn-outline-info">
         <span>Info button</span>
       </button>
-      <button class="cell eva-btn eva-btn-outline-neutral">
+      <button class="cell eva-btn-outline-neutral">
         <span>Neutral button</span>
       </button>
-      <button class="cell eva-btn" disabled>
+      <button class="cell" disabled>
         <span>Disabled button</span>
       </button>
     </div>
