Reworked theme files.

--- a/src/app/eva/styleguide/components/buttons-guide/buttons-guide.component.scss
+++ b/src/app/eva/styleguide/components/buttons-guide/buttons-guide.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/theme/settings';
+@import '../../../../../styles/theme/index';
 
 .buttons-examples-container {
   display: flex;
