--- a/src/app/eva/styleguide/components/snackbar-guide/snackbar-guide.component.scss
+++ b/src/app/eva/styleguide/components/snackbar-guide/snackbar-guide.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/theme/settings';
+@import '../../../../../styles/theme/index';
 
 .#{$project-prefix}-btn {
   margin-top: 0.75rem;
