--- a/src/app/eva/styleguide/components/resolutions-guide/resolutions-guide.component.scss
+++ b/src/app/eva/styleguide/components/resolutions-guide/resolutions-guide.component.scss
@@ -1,4 +1,4 @@
-@import '../../../../../styles/theme/theme.scss';
+@import '../../../../../styles/theme/index';
 
 .responsive-layout-example {
   background-color: color(tertiary, base);
