--- a/src/styles/theme/theme.scss
+++ b/src/styles/theme/theme.scss
@@ -1,13 +1,2 @@
-@import './_settings.scss';
-@import './_colors.scss';
-@import './_color-classes.scss';
-@import './_responsive.scss';
-@import './_buttons.scss';
-@import './_button-classes.scss';
-@import './_cards.scss';
-@import './_flex.scss';
-@import './_forms.scss';
-@import './_snackbar.scss';
-@import './_spacing.scss';
-@import './_text.scss';
-@import './_common.scss';
+@import './index';
+@import './classes/index';
