--- a/src/app/eva/styleguide/styleguide.component.html
+++ b/src/app/eva/styleguide/styleguide.component.html
@@ -44,6 +44,7 @@
       <eva-forms-guide></eva-forms-guide>
       <eva-resolutions-guide></eva-resolutions-guide>
       <eva-snackbar-guide></eva-snackbar-guide>
+      <eva-spinner-guide></eva-spinner-guide>
     </div>
   </div>
 </main>
