--- a/src/app/eva/styleguide/styleguide.component.html
+++ b/src/app/eva/styleguide/styleguide.component.html
@@ -45,6 +45,7 @@
       <eva-resolutions-guide></eva-resolutions-guide>
       <eva-snackbar-guide></eva-snackbar-guide>
       <eva-spinner-guide></eva-spinner-guide>
+      <eva-datepicker-guide></eva-datepicker-guide>
     </div>
   </div>
 </main>
