--- a/src/styles/theme/classes/index.scss
+++ b/src/styles/theme/classes/index.scss
@@ -4,6 +4,7 @@
 @import './_flex.scss';
 @import './_forms.scss';
 @import './_snackbar.scss';
+@import './_datepicker.scss';
 @import './_spacing.scss';
 @import './_text.scss';
 @import './_common.scss';
