Added prefix and suffix icons to forms.

--- a/src/app/eva/styleguide/components/datepicker-guide/datepicker-guide.component.html
+++ b/src/app/eva/styleguide/components/datepicker-guide/datepicker-guide.component.html
@@ -13,7 +13,8 @@
     material component.
 
     <div class="center-xy grid-x">
-      <div class="cell small-12 margin-y">
+      <div class="cell small-12 margin-y form-field">
+        <i class="prefix-icon material-icons">date_range</i>
         <input
           placeholder="Choose a date"
           (keydown)="$event.preventDefault()"
