--- a/src/app/eva/styleguide/components/forms-guide/forms-guide.component.html
+++ b/src/app/eva/styleguide/components/forms-guide/forms-guide.component.html
@@ -6,8 +6,14 @@
     Input and textarea exaple with error validation.
   </div>
   <div class="card-content">
-    <form class="grid-x grid-margin-y" #exampleForm="ngForm">
+    <form class="grid-x grid-margin-y grid-margin-x" #exampleForm="ngForm">
       <div class="cell small-12">
+        Add the form-field class to the container of the input and add a
+        material icon with the prefix-icon or suffix-icon class
+        <b>before</b>
+        the input to add the icon.
+      </div>
+      <div class="cell small-12 form-field">
         <label>Input example</label>
         <input
           required
@@ -16,8 +22,19 @@
           placeholder="email@email.com"
           [(ngModel)]="email"
           name="email"
-          class="mb-3"
         />
+      </div>
+      <div class="cell small-6 form-field">
+        <i class="material-icons prefix-icon">
+          attach_money
+        </i>
+        <input type="text" required placeholder="Prefix icon input" />
+      </div>
+      <div class="cell small-6 form-field">
+        <i class="material-icons suffix-icon">
+          date_range
+        </i>
+        <input type="text" required placeholder="Suffix icon input" />
       </div>
       <div class="cell small-12">
         <label>Select example</label>
@@ -38,7 +55,6 @@
           cols="30"
           grid-x
           grid-margin-xs="10"
-          class="mb-3"
         ></textarea>
       </div>
     </form>
