Added bottom sheet

--- a/src/app/eva/styleguide/components/datepicker-guide/datepicker-guide.component.html
+++ b/src/app/eva/styleguide/components/datepicker-guide/datepicker-guide.component.html
@@ -3,7 +3,10 @@
     Material Datepicker
   </div>
   <div class="card-subtitle">
-    <a href="https://material.angular.io/components/snack-bar/overview">
+    <a
+      href="https://material.angular.io/components/datepicker/overview"
+      target="_blank"
+    >
       Datepicker Input
     </a>
   </div>
