--- a/src/app/eva/styleguide/components/snackbar-guide/snackbar-guide.component.html
+++ b/src/app/eva/styleguide/components/snackbar-guide/snackbar-guide.component.html
@@ -3,7 +3,10 @@
     Material Snackbar
   </div>
   <div class="card-subtitle">
-    <a href="https://material.angular.io/components/snack-bar/overview">
+    <a
+      href="https://material.angular.io/components/snack-bar/overview"
+      target="_blank"
+    >
       Snackbar - Toast - Alert
     </a>
   </div>
