--- a/src/app/eva/styleguide/styleguide.component.html
+++ b/src/app/eva/styleguide/styleguide.component.html
@@ -46,6 +46,7 @@
       <eva-snackbar-guide></eva-snackbar-guide>
       <eva-spinner-guide></eva-spinner-guide>
       <eva-datepicker-guide></eva-datepicker-guide>
+      <eva-bottom-sheet-guide></eva-bottom-sheet-guide>
     </div>
   </div>
 </main>
