--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,18 @@
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
 @import './styles/theme/theme.scss';
 
+html,
+body {
+  height: 100%;
+  overflow: auto !important;
+}
+
+.cdk-global-scrollblock {
+  position: static !important;
+  width: initial !important;
+  overflow-y: inherit !important;
+}
+
 pre {
   background-color: #333333;
   color: white;
@@ -9,4 +21,15 @@ pre {
   line-height: 1;
   display: flex;
   align-items: center;
+}
+
+.custom-sheet {
+  position: absolute;
+  bottom: 0;
+  right: 2rem;
+  min-width: 40rem !important;
+  padding: 0 !important;
+  max-width: 55rem !important;
+  border-top-left-radius: 0.25rem !important;
+  border-top-right-radius: 0.25rem !important;
 }
