--- a/src/styles/grid/foundation/xy-grid/_classes.scss
+++ b/src/styles/grid/foundation/xy-grid/_classes.scss
@@ -8,6 +8,7 @@
 
 // Margin Grid classes
 @mixin xy-base-grid-classes {
+
   // Grid Container
   .grid-container {
     @include xy-grid-container;
@@ -36,6 +37,7 @@
     &.shrink {
       @include xy-cell-base(shrink);
     }
+
   }
   .grid-x {
     > .auto {
@@ -54,9 +56,9 @@
     // https://github.com/foundation/foundation-sites/pull/10222 and
     // https://github.com/foundation/foundation-sites/pull/10164
     .grid-x {
-      $str: '> .#{$-zf-size}-shrink, > .#{$-zf-size}-full';
+      $str: "> .#{$-zf-size}-shrink, > .#{$-zf-size}-full";
       @for $i from 1 through $grid-columns {
-        $str: $str + ', > .#{$-zf-size}-#{$i}';
+        $str: $str + ", > .#{$-zf-size}-#{$i}"
       }
       #{$str} {
         flex-basis: auto;
@@ -105,16 +107,8 @@
   }
 }
 
-@mixin -xy-breakpoint-cell-classes(
-  $class-breakpoint,
-  $gutter-breakpoint,
-  $vertical
-) {
-  $prefix: if(
-    $class-breakpoint == $-zf-zero-breakpoint,
-    '',
-    '#{$class-breakpoint}-'
-  );
+@mixin -xy-breakpoint-cell-classes($class-breakpoint, $gutter-breakpoint, $vertical) {
+  $prefix: if($class-breakpoint == $-zf-zero-breakpoint, '', '#{$class-breakpoint}-');
   > .#{$prefix}auto {
     @include xy-cell-size(auto, $vertical: $vertical);
   }
@@ -125,11 +119,7 @@
 
   @for $i from 1 through $grid-columns {
     // Sizing (percentage)
-    $classname: if(
-      $vertical,
-      '.#{$class-breakpoint}-#{$i}',
-      '.#{$class-breakpoint}-#{$i}'
-    );
+    $classname: if($vertical, '.#{$class-breakpoint}-#{$i}', '.#{$class-breakpoint}-#{$i}');
 
     > #{$classname} {
       @include xy-cell-size($i, $vertical: $vertical);
@@ -142,50 +132,31 @@
   $gutter-position: left right,
   $vertical: false,
   $wrapping-selector: '.grid-margin-x'
-) {
+){
   #{$wrapping-selector} {
     @include xy-gutters($negative: true, $gutter-position: $gutter-position);
 
     // Base cell styles
     > .cell {
-      @include xy-cell(
-        $vertical: $vertical,
-        $output: (
-          size gutters,
-        )
-      );
+      @include xy-cell($vertical: $vertical, $output: (size gutters));
     }
 
     // base styles need to all be before the auto and shrink styles
     @include -zf-each-breakpoint() {
-      @if (
-        type-of($grid-margin-gutters) ==
-          'map' and
-          map-has-key($grid-margin-gutters, $-zf-size) and
-          $-zf-size !=
-          $-zf-zero-breakpoint
-      ) {
+      @if(type-of($grid-margin-gutters) == 'map' and map-has-key($grid-margin-gutters, $-zf-size) and $-zf-size != $-zf-zero-breakpoint) {
         > .cell {
-          @include xy-cell(
-            $vertical: $vertical,
-            $output: (
-              size gutters,
-            )
-          );
+          @include xy-cell($vertical: $vertical, $output: (size gutters));
         }
       }
     }
 
     @include -zf-each-breakpoint() {
+
       // This is purely for responsive gutters - the margin grid has to go back and adjust widths (or heights)
       // for all prior breakpoints.
       // As their gutter is defined with their width/height, even breakpoint without a new margin must be
       // generated to not having their width/height overrided by re-adjusted smaller breakpoints.
-      @if (
-        type-of($grid-margin-gutters) ==
-          'map' and
-          map-has-key($grid-margin-gutters, $-zf-size)
-      ) {
+      @if(type-of($grid-margin-gutters) == 'map' and map-has-key($grid-margin-gutters, $-zf-size)) {
         @each $bp in -zf-breakpoints-less-than($-zf-size) {
           @include -xy-breakpoint-cell-classes($bp, $-zf-size, $vertical);
         }
@@ -199,6 +170,7 @@
 // Padding Grid classes
 @mixin xy-padding-grid-classes {
   .grid-padding-x {
+
     // Negative margin for nested grids
     .grid-padding-x {
       @include xy-gutters($negative: true);
@@ -212,10 +184,7 @@
 
     // Base cell styles
     > .cell {
-      @include xy-gutters(
-        $gutters: $grid-padding-gutters,
-        $gutter-type: padding
-      );
+      @include xy-gutters($gutters: $grid-padding-gutters, $gutter-type: padding);
     }
   }
 }
@@ -226,14 +195,7 @@
     @include -zf-each-breakpoint {
       @for $i from 1 through $xy-block-grid-max {
         .#{$-zf-size}-up-#{$i} {
-          @include xy-grid-layout(
-            $n: $i,
-            $selector: '.cell',
-            $gutter-type: padding,
-            $output: (
-              size,
-            )
-          );
+          @include xy-grid-layout($n: $i, $selector: '.cell', $gutter-type: padding, $output: (size));
         }
       }
     }
@@ -244,22 +206,11 @@
       @for $i from 1 through $xy-block-grid-max {
         // This is purely for responsive gutters - the margin grid has to go back and adjust widths (or heights)
         // for prior breakpoints based on the responsive gutter.
-        @if (
-          type-of($grid-margin-gutters) ==
-            'map' and
-            map-has-key($grid-margin-gutters, $-zf-size)
-        ) {
+        @if(type-of($grid-margin-gutters) == 'map' and map-has-key($grid-margin-gutters, $-zf-size)) {
           @each $bp in -zf-breakpoints-less-than($-zf-size) {
-            @if (map-has-key($grid-margin-gutters, $bp)) {
+            @if(map-has-key($grid-margin-gutters, $bp)) {
               .grid-margin-x.#{$bp}-up-#{$i} {
-                @include xy-grid-layout(
-                  $n: $i,
-                  $selector: '.cell',
-                  $gutter-type: margin,
-                  $output: (
-                    size,
-                  )
-                );
+                @include xy-grid-layout($n: $i, $selector: '.cell', $gutter-type: margin, $output: (size));
               }
             }
           }
@@ -267,14 +218,7 @@
       }
       @for $i from 1 through $xy-block-grid-max {
         .grid-margin-x.#{$-zf-size}-up-#{$i} {
-          @include xy-grid-layout(
-            $n: $i,
-            $selector: '.cell',
-            $gutter-type: margin,
-            $output: (
-              size,
-            )
-          );
+          @include xy-grid-layout($n: $i, $selector: '.cell', $gutter-type: margin, $output: (size));
         }
       }
     }
@@ -306,11 +250,7 @@
       $o: $i - 1;
 
       .#{$-zf-size}-offset-#{$o} {
-        @include xy-cell-offset(
-          $o,
-          $gutters: $grid-padding-gutters,
-          $gutter-type: padding
-        );
+        @include xy-cell-offset($o, $gutters: $grid-padding-gutters, $gutter-type: padding);
       }
 
       .grid-margin-x > .#{$-zf-size}-offset-#{$o} {
@@ -321,7 +261,11 @@
 }
 
 // Vertical Grid classes
-@mixin xy-vertical-grid-classes($margin-grid: true, $padding-grid: true) {
+@mixin xy-vertical-grid-classes(
+  $margin-grid: true,
+  $padding-grid: true
+) {
+
   @include -zf-each-breakpoint() {
     @if not($-zf-size == $-zf-zero-breakpoint) {
     }
@@ -329,6 +273,7 @@
 
   .grid-y {
     @include xy-grid(vertical, false);
+
 
     > .cell {
       @include xy-cell-reset();
@@ -342,14 +287,15 @@
       @include xy-cell-size(shrink, $gutter-type: none, $vertical: true);
     }
 
+
     @include -zf-each-breakpoint() {
       // This is a bit of a hack/workaround, see these issues and PRs for the backstory:
       // https://github.com/foundation/foundation-sites/issues/10244
       // https://github.com/foundation/foundation-sites/pull/10222 and
       // https://github.com/foundation/foundation-sites/pull/10164
-      $str: '> .#{$-zf-size}-shrink, > .#{$-zf-size}-full';
+      $str: "> .#{$-zf-size}-shrink, > .#{$-zf-size}-full";
       @for $i from 1 through $grid-columns {
-        $str: $str + ', > .#{$-zf-size}-#{$i}';
+        $str: $str + ", > .#{$-zf-size}-#{$i}"
       }
       #{$str} {
         flex-basis: auto;
@@ -384,6 +330,7 @@
           @include xy-cell-size($i, $gutter-type: none, $vertical: true);
         }
       }
+
     }
   }
 
@@ -396,11 +343,7 @@
 
       // Base cell styles
       > .cell {
-        @include xy-gutters(
-          $gutters: $grid-padding-gutters,
-          $gutter-type: padding,
-          $gutter-position: top bottom
-        );
+        @include xy-gutters($gutters: $grid-padding-gutters, $gutter-type: padding, $gutter-position: top bottom);
       }
     }
   }
@@ -408,6 +351,7 @@
   @if $margin-grid {
     @include xy-margin-grid-classes(top bottom, true, '.grid-margin-y');
   }
+
 }
 
 @mixin xy-frame-grid-classes($vertical-grid: true, $margin-grid: true) {
@@ -428,11 +372,14 @@
     @include xy-cell-block(true);
   }
 
+
   .cell-block-container {
     @include xy-cell-block-container();
   }
 
+
   @include -zf-each-breakpoint(false) {
+
     .#{$-zf-size}-grid-frame {
       @include xy-grid-frame;
     }
@@ -466,6 +413,7 @@
           width: auto;
           @include xy-grid-frame(true);
         }
+
       }
     }
     .cell {
@@ -482,22 +430,11 @@
   @if $margin-grid {
     @include xy-margin-grid-classes(top bottom, true, '.grid-margin-y');
     .grid-frame.grid-margin-y {
-      @include xy-grid-frame(
-        true,
-        false,
-        $grid-margin-gutters,
-        $include-base: false
-      );
+      @include xy-grid-frame(true, false, $grid-margin-gutters, $include-base: false);
     }
     @include -zf-each-breakpoint(false) {
       .grid-margin-y.#{$-zf-size}-grid-frame {
-        @include xy-grid-frame(
-          true,
-          false,
-          $grid-margin-gutters,
-          $-zf-size,
-          false
-        );
+        @include xy-grid-frame(true, false, $grid-margin-gutters, $-zf-size, false);
       }
     }
   }
@@ -514,42 +451,43 @@
   $vertical-grid: true,
   $frame-grid: true
 ) {
+
   // Base grid styles
-  @if ($base-grid) {
+  @if($base-grid) {
     @include xy-base-grid-classes();
   }
 
   // Margin grid
-  @if ($margin-grid) {
+  @if($margin-grid) {
     @include xy-margin-grid-classes();
   }
 
   // Padding grid
-  @if ($padding-grid) {
+  @if($padding-grid) {
     @include xy-padding-grid-classes();
   }
 
   // Block grid
-  @if ($block-grid) {
+  @if($block-grid) {
     @include xy-block-grid-classes($margin-grid, $padding-grid);
   }
 
   // Collapse gutters
-  @if ($collapse) {
+  @if($collapse) {
     @include xy-collapse-grid-classes($margin-grid, $padding-grid);
   }
 
   // Offset gutters
-  @if ($offset) {
+  @if($offset) {
     @include xy-offset-cell-classes();
   }
 
   // Vertical grid
-  @if ($vertical-grid) {
+  @if($vertical-grid) {
     @include xy-vertical-grid-classes($margin-grid, $padding-grid);
   }
 
   @if ($frame-grid) {
-    @include xy-frame-grid-classes($vertical-grid, $margin-grid);
+    @include xy-frame-grid-classes($vertical-grid, $margin-grid)
   }
 }
