--- a/src/styles/grid/foundation/xy-grid/_frame.scss
+++ b/src/styles/grid/foundation/xy-grid/_frame.scss
@@ -12,6 +12,7 @@
   $breakpoint: null,
   $include-base: true
 ) {
+
   @if $include-base {
     overflow: hidden;
     position: relative;
@@ -38,7 +39,8 @@
         $gutter: rem-calc($gutter);
         width: calc(#{$unit} + #{$gutter});
       }
-    } @else {
+    }
+    @else {
       @if $vertical == true {
         height: if($nested == true, 100%, 100vh);
       } @else {
@@ -51,7 +53,9 @@
 /// Modifies a cell to give it "block" behavior (overflow auto, inertial scrolling)
 ///
 /// @param {Boolean} $vertical [false] - Is grid vertical or horizontal. Should match grid.
-@mixin xy-cell-block($vertical: false) {
+@mixin xy-cell-block(
+  $vertical: false
+) {
   $property: if($vertical == true, 'overflow-y', 'overflow-x');
 
   @if $vertical == true {
