--- a/src/styles/grid/foundation/xy-grid/_gutters.scss
+++ b/src/styles/grid/foundation/xy-grid/_gutters.scss
@@ -30,15 +30,16 @@
 
       // Loop through each gutter position
       @each $value in $gutter-position {
-        #{$gutter-type}-#{$value}: unquote('#{$operator}#{$gutter}');
+        #{$gutter-type}-#{$value}: unquote("#{$operator}#{$gutter}");
       }
     }
-  } @else if (type-of($gutters) == 'number') {
+  }
+  @else if (type-of($gutters) == 'number') {
     $gutter: rem-calc($gutters) / 2;
 
     // Loop through each gutter position
     @each $value in $gutter-position {
-      #{$gutter-type}-#{$value}: unquote('#{$operator}#{$gutter}');
+      #{$gutter-type}-#{$value}: unquote("#{$operator}#{$gutter}");
     }
   }
 }
