Removed local eva. Installed eva package.

--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -6,7 +6,7 @@ $content-font: 'Open Sans', sans-serif;
 
 /* Each color creates different variations, and different classes for color, and background */
 $color-map: (
-  primary: #004977,
+  primary: purple,
   secondary: #0d74af,
   tertiary: #009688,
   accent: #1590d6,
