--- a/src/app/eva/styleguide/components/resolutions-guide/resolutions-guide.component.scss
+++ b/src/app/eva/styleguide/components/resolutions-guide/resolutions-guide.component.scss
@@ -1,4 +1,5 @@
-@import '../../../../../styles/eva/eva-for-scss.scss';
+@import '../../../../../styles/settings';
+@import '~eva-css/styles/eva/eva-for-scss.scss';
 
 .responsive-layout-example {
   background-color: color(tertiary, base);
